[package]
name = "twitterlike"
version = "0.1.0"
authors = ["41nyaa"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite ="0.21"
http = "0.1.17"
http-bytes = "0.1.0" 
serde_derive = "1.0.114"
serde = "1.0.114"
serde_json = "1.0.56" 
iced = "0.3"